--- a/postcss/blocks/video-block.css
+++ b/postcss/blocks/video-block.css
@@ -1,7 +1,7 @@
 .video-block {
-  outline: $outline;
   padding: 0 30px;
   padding-bottom: 30px;
+  outline: $outline;
 }
 
 .video-block__wrapper {
@@ -10,19 +10,21 @@
 
 .video-block__title {
   width: 130px;
-  font-size: 17px;
   margin: 0;
   padding: 25px 0;
-  font-family: $bold;
+  font-size: $video-block-title-fontsize;
+  font-weight: 700;
 }
 
 .video-block__description {
-  font-size: 13px;
-  line-height: 24px;
   margin: 0;
   padding: 30px;
+  font-size: $video-block-description-fontsize: 13px;;
+  line-height: 24px;
 }
 
 .video-block__order {
   @mixin btn;
+  border: $btn-border;
+  color: $basic-color;
 }
