--- a/postcss/blocks/contacts.css
+++ b/postcss/blocks/contacts.css
@@ -1,27 +1,27 @@
 .contacts {
-  outline: $outline;
   padding: 35px 0;
+  outline: $outline;
 }
 
 .contacts__title {
-  font-size: 18px;
-  font-family: $bold;
   padding: 30px;
+  font-size: $contactst-title-fontsize;
+  font-weight: 700;
 }
 
 .contacts__list {
-  padding: 0;
-  list-style: none;
-  color: $grey;
-  padding: 0 30px;
   margin: 30px 0;
+  padding: 0;
+  padding: 0 30px;
+  list-style: none;
+  color: $basic-color;
 }
 
 .contacts__list-link {
-  border-bottom: 1px solid #62d1ba;
-  text-decoration: none;
   padding-bottom: 2px;
-  color: $grey;
+  border-bottom: 1px solid #62d1ba;
+  color: $basic-color;
+  text-decoration: none;
 }
 
 .contacts__list-item-text {
@@ -29,12 +29,14 @@
 }
 
 .contacts__map {
-  background-image: url("../../img/map-mobile@1x.jpg");
   height: 457px;
+  background-image: url("../../img/map-mobile@1x.jpg");
 }
 
 .contacts__feedback-btn {
   @mixin btn;
   margin: 0 38px;
   margin-top: 38px;
+  border: $btn-border;
+  color: $basic-color;
 }
