--- a/postcss/blocks/main-nav.css
+++ b/postcss/blocks/main-nav.css
@@ -1,8 +1,8 @@
 .main-nav__list {
-  font-size: 17px;
-  list-style: none;
   padding: 0;
-  font-family: $bold;
+  font-size: $main-nav-fontsize;
+  font-weight: 700;
+  list-style: none;
 }
 
 .main-nav__item {
