--- a/postcss/blocks/order-description.css
+++ b/postcss/blocks/order-description.css
@@ -1,7 +1,7 @@
 .order-description {
-  font-size: 13px;
-  color: $grey;
   padding: 30px;
   margin: 0;
+  font-size: $order-description-fontsize;
   line-height: 24px;
+  color: $basic-color;
 }
