--- a/postcss/blocks/product.css
+++ b/postcss/blocks/product.css
@@ -3,24 +3,24 @@
 }
 
 .product__title {
-  font-size: 17px;
-  font-family: $bold;
   margin: 0;
   margin-top: 28px;
   padding: 0 28px;
   margin-bottom: 15px;
+  font-size: $product-title-fontsize;
+  font-weight: 700;
 }
 
 .product__description {
-  font-size: 13px;
-  color: $grey;
   padding: 0 28px;
+  font-size: $product-description-fontsize;
+  color: $basic-color;
 }
 
 .product__price-cart-wrapper {
   margin: 0 auto;
   margin-top: 25px;
-  border-top: 1px solid #ececec;
   width: 200px;
   padding-top: 25px;
+  border-top: 1px solid #ececec;
 }
