--- a/postcss/blocks/size-form.css
+++ b/postcss/blocks/size-form.css
@@ -1,19 +1,19 @@
 .size-form__title {
-  font-size: 25px;
-  font-family: $bold;
-  line-height: 30px;
-  text-transform: uppercase;
-  width: 150px;
-  text-align: center;
   display: block;
+  width: 150px;
   margin: 0 auto;
   margin-bottom: 15px;
+  font-size: $size-form-title-fontsize;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .size-form__subtitle {
-  color: $grey;
   display: block;
   text-align: center;
+  color: $basic-color;
 }
 
 .size-form__input {
@@ -22,9 +22,9 @@
 
 .size-form__send {
   @mixin btn;
-  border: none;
   width: 100%;
+  font-size: 17px;
   background-color: #63d1bb;
   color: #ffffff;
-  font-size: 17px;
+  border: none;
 }
