--- a/postcss/global.css
+++ b/postcss/global.css
@@ -1,13 +1,17 @@
 @font-face {
-  font-family: "opensans";
-  src: url("../fonts/opensans.woff"),
-       url("../fonts/opensans.woff2");
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/opensans.woff") format('woff'),
+       url("../fonts/opensans.woff2") format('woff2');
 }
 
 @font-face {
-  font-family: "opensansbold";
-  src: url("../fonts/opensansbold.woff"),
-       url("../fonts/opensansbold.woff2");
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/opensansbold.woff") format('woff'),
+       url("../fonts/opensansbold.woff2") format('woff2');
 }
 
 body {
@@ -15,7 +19,7 @@ body {
   margin: 0 auto;
   background-color: #ffffff;
   font-size: $basic-fontsize;
-  font-family: $normal;
+  font-family: "Open Sans","Arial",sans-serif;
 }
 
 img {
