--- a/postcss/variables.css
+++ b/postcss/variables.css
@@ -2,11 +2,19 @@ $outline: 1px solid red;
 /**/
 $basic-fontsize: 15px;
 $page-title-fontsize: 27px;
+$page-title-tabl-fontsize: 43px;
 $aboutus-block-title-fontsize: 25px;
+$aboutus-block-title-tablet-fontsize: 43px;
 $aboutus-block-item-fontsize: 17px;
 $comments-title-fontsize: 25px;
+$comments-title-tablet-fontsize: 43px;
 $comment-name-fontsize: 18px;
-$contactst-title-fontsize: 18px;
+$comment-name-tablet-fontsize: 17px;
+$comment-link-tablet-fontsize: 17px;
+$comment-text-tablet-fontsize: 17px;
+$contacts-title-fontsize: 18px;
+$contacts-title-tablet-fontsize: 43px;
+$contacts-list-tablet-fontsize: 17px;
 $developer-contact-fontsize: 19px;
 $main-nav-fontsize: 17px;
 $order-description-fontsize: 17px;
@@ -17,6 +25,8 @@ $video-block-title-fontsize: 17px;
 $video-block-description-fontsize: 13px;
 $size-form-title-fontsize: 25px;
 $week-product-title-fontsize: 25px;
+$week-product-title-desktop-fontsize: 43px;
+$week-product-description-desktop-fontsize: 17px;
 $week-product-category-title-fontsize: 17px;
 $week-product-price-fontsize: 17px;
 
