--- a/postcss/blocks/aboutus-block.css
+++ b/postcss/blocks/aboutus-block.css
@@ -19,6 +19,10 @@
   font-size: $aboutus-block-item-fontsize;
   font-weight: 700;
 
+  &--rocket {
+    width: 300px;
+  }
+
   &--flower,
   &--heart {
     width: 185px;
@@ -28,5 +32,31 @@
   &--rope,
   &--gift {
     width: 215px;
+  }
+}
+
+@media (min-width: 768px) {
+  .aboutus-block {
+    padding-left: 50px;
+  }
+
+  .aboutus-block__title {
+    font-size: $aboutus-block-title-tablet-fontsize;
+  }
+
+  .aboutus-block__list {
+    column-count: 2;
+  }
+}
+
+@media (min-width: 1150px) {
+  .aboutus-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .aboutus-block__title {
+    margin-right: 305px;
   }
 }
