--- a/postcss/blocks/banner-wrapper.css
+++ b/postcss/blocks/banner-wrapper.css
@@ -1,8 +1,24 @@
 .banner-wrapper {
   height: 282px;
+}
+
+.banner-wrapper__background {
+  height: 100%;
+  background-image: url("../img/hero-mobile.jpg");
+  background-color: #f9f9f9;
+  background-repeat: no-repeat;
+  background-position: center;
   padding-top: 70px;
   box-sizing: border-box;
-  background-image: url("../img/hero-mobile.jpg");
-  background-size: cover;
-  background-position-y: 20%;
+}
+
+@media (min-width: 768px) {
+  .banner-wrapper {
+    min-width: 768px;
+    height: 565px;
+  }
+
+  .banner-wrapper__background {
+    background-image: url("../img/hero-desktop.jpg");
+  }
 }
