--- a/postcss/blocks/catalog-links.css
+++ b/postcss/blocks/catalog-links.css
@@ -21,3 +21,15 @@
   margin: 0;
   line-height: 24px;
 }
+
+@media (min-width: 768px) {
+  .catalog-links {
+    display: flex;
+    padding: 0 50px;
+    background-color: #f9f9f9;
+  }
+
+  .catalog-links__item {
+    width: 50%;
+  }
+}
