--- a/postcss/blocks/order-form.css
+++ b/postcss/blocks/order-form.css
@@ -59,6 +59,10 @@
 
 .order-form__required-warning {
   font-size: 13.5px;
+
+  &--tablet {
+    display: none;
+  }
 }
 
 .order-form__submit {
@@ -69,4 +73,140 @@
   color: $basic-color;
   background-color: #ffffff;
   cursor: pointer;
+}
+
+
+@media (min-width: 768px) {
+  .order-form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .order-form__fieldset {
+    position: relative;
+    padding-right: 50px;
+    padding-left: 50px;
+
+    &--color {
+      background-color: #f1f1f1;
+    }
+
+    &--mail-phone {
+      display: flex;
+      align-items: baseline;
+      justify-content: flex-end;
+      background-color: #f1f1f1;
+    }
+
+    &--message {
+      display: flex;
+      align-items: baseline;
+      justify-content: flex-end;
+      padding-top: 60px;
+    }
+  }
+
+  .order-form__legend {
+    position: absolute;
+    left: 50px;
+  }
+
+  .order-form__fields-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &--color {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 435px;
+      margin: 0 auto;
+    }
+
+    &--personal {
+      align-items: flex-end;
+    }
+  }
+
+  .order-form__fields {
+    display: flex;
+
+    &--personal {
+      align-items: baseline;
+      width: 500px;
+    }
+  }
+
+  .order-form__phone-input,
+  .order-form__email-input {
+    background-color: #f1f1f1;
+    width: 500px;
+  }
+
+  .order-form__message-textarea {
+    width: 500px;
+  }
+
+  .order-form__submit-wrapper {
+    display: flex;
+    align-items: baseline;
+    align-self: flex-end;
+    justify-content: space-between;
+    width: 500px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+  }
+
+  .order-form__required-warning {
+    display: none;
+
+    &--tablet {
+      display: block;
+      order: 2;
+    }
+  }
+
+  .order-form__submit {
+    order: 1;
+    width: auto;
+  }
+}
+
+@media (min-width: 1150px) {
+  .order-form__fieldset {
+    padding-left: 215px;
+    padding-right: 215px;
+
+    &--mail-phone,
+    &--message {
+      justify-content: flex-start;
+    }
+  }
+
+  .order-form__fields-wrapper {
+    align-items: flex-start;
+
+    &--color {
+      justify-content: flex-start;
+      width: 635px;
+      margin: 0;
+    }
+  }
+
+  .order-form__fields {
+    width: 700px;
+  }
+
+  .order-form__phone-input,
+  .order-form__email-input,
+  .order-form__message-textarea {
+    width: 700px;
+  }
+
+  .order-form__submit-wrapper {
+    align-self: flex-start;
+    width: 700px;
+    padding-left: 215px;
+  }
 }
