--- a/postcss/blocks/page-footer.css
+++ b/postcss/blocks/page-footer.css
@@ -3,3 +3,11 @@
   background-color: #f1f1f1;
   outline: $outline;
 }
+
+@media (min-width: 768px) {
+  .page-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
