--- a/postcss/blocks/page-header.css
+++ b/postcss/blocks/page-header.css
@@ -12,3 +12,53 @@
   height: 35px;
   margin: 0 auto;
 }
+
+.page-header__text {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .page-header {
+    display: flex;
+    justify-content: space-between;;
+    align-items: stretch;
+    flex-wrap: wrap;
+    padding: 0;
+    width: 100%;
+    min-width: 768px;
+  }
+
+  .page-header__logo {
+    width: 113px;
+    height: 46px;
+    order: 1;
+    margin: 0;
+    align-self: center;
+    padding-left: 50px;
+  }
+
+  .page-header__text {
+    display: block;
+    order: 4;
+    width: 50%;
+    background-color: #f9f9f9;
+    line-height: 83px;
+    border-top: 1px solid #ececec;
+    color: #444444;
+  }
+}
+
+@media (min-width: 1150px) {
+  .page-header {
+    width: 100%;
+    width: 1150px;
+  }
+
+  .page-header__logo {
+    order: 2;
+  }
+
+  .page-header__text {
+    order: 5;
+  }
+}
