--- a/postcss/blocks/video-block.css
+++ b/postcss/blocks/video-block.css
@@ -19,7 +19,7 @@
 .video-block__description {
   margin: 0;
   padding: 30px;
-  font-size: $video-block-description-fontsize: 13px;;
+  font-size: $video-block-description-fontsize;
   line-height: 24px;
 }
 
@@ -27,4 +27,83 @@
   @mixin btn;
   border: $btn-border;
   color: $basic-color;
+}
+
+@media (min-width: 768px) {
+  .video-block {
+    padding: 50px;
+  }
+
+  .video-block__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .video-block__title {
+    order: 2;
+    width: auto;
+    margin-left: 42px;
+  }
+
+  .video-block__content {
+    width: 100%;
+    height: 455px;
+    order: 1;
+  }
+
+  .video-block__description {
+    order: 3;
+    padding-left: 42px;
+    padding-right: 42px;
+  }
+
+  .video-block__order {
+    order: 4;
+    margin-left: 42px;
+    margin-right: 42px;
+  }
+}
+
+@media (min-width: 1150px) {
+  .video-block {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    padding: 50px;
+  }
+
+  .video-block__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 367px;
+    height: 455px;
+  }
+
+  .video-block__title {
+    order: 2;
+    width: auto;
+    margin-left: 42px;
+  }
+
+  .video-block__content {
+    position: absolute;
+    left: 50px;
+    width: 682px;
+    height: 455px;
+    order: 1;
+  }
+
+  .video-block__description {
+    order: 3;
+    padding-left: 42px;
+    padding-right: 42px;
+  }
+
+  .video-block__order {
+    order: 4;
+    margin-left: 42px;
+    margin-right: 42px;
+  }
 }
