--- a/postcss/blocks/week-product.css
+++ b/postcss/blocks/week-product.css
@@ -34,6 +34,11 @@
   border-bottom: 1px solid #ececec;
 }
 
+.week-product__img {
+  display: block;
+  margin: 0 auto;
+}
+
 .week-product__item-price {
   display: block;
   font-size: $week-product-price-fontsize;
@@ -47,4 +52,77 @@
   margin-top: 25px;
   border: $btn-border;
   color: $basic-color;
+}
+
+@media (min-width: 768px) {
+  .week-product {
+    display: flex;
+    width: 100%;
+    min-width: 768px;
+    justify-content: space-between;;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0 50px;
+    box-sizing: border-box;
+  }
+
+  .week-product__title {
+    font-size: $week-product-title-desktop-fontsize;
+    order: 1;
+  }
+
+  .week-product__category-title {
+    order: 2;
+  }
+
+  .week-product__description {
+    width: 285px;
+    font-size: $week-product-description-desktop-fontsize;
+    line-height: 30px;
+    order: 3;
+    align-self: flex-start;
+  }
+
+  .week-product__img {
+    order: 4;
+  }
+
+  .week-product__options-table {
+    width: 290px;
+    order: 5;
+  }
+
+  .week-product__item-price {
+    order: 6;
+  }
+
+  .week-product__order {
+    order: 7;
+  }
+}
+
+@media (min-width: 1150px) {
+  .week-product {
+    flex-direction: column;
+    align-items: flex-start;
+    min-height: 755px;
+  }
+
+  .week-product__title {
+    order: 2;
+    align-self: center;
+  }
+
+  .week-product__category-title {
+    order: 1;
+  }
+
+  .week-product__img {
+    position: absolute;
+    right: 0;
+  }
+
+  .week-product__order {
+    width: 290px;
+  }
 }
