--- a/postcss/global.css
+++ b/postcss/global.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  width: 320px;
+  min-width: 320px;
   margin: 0 auto;
   background-color: #ffffff;
   font-size: $basic-fontsize;
@@ -25,4 +25,16 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+@media (min-width: 768px) {
+  body {
+    min-width: 768px;
+  }
+}
+
+@media (min-width: 1150px) {
+  body {
+    width: 1150px;
+  }
 }
