--- a/postcss/blocks/comments.css
+++ b/postcss/blocks/comments.css
@@ -24,7 +24,7 @@
   color: $basic-color;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .comments {
     display: flex;
     min-height: 457px;
