--- a/postcss/blocks/developer-contact.css
+++ b/postcss/blocks/developer-contact.css
@@ -8,7 +8,7 @@
   font-style: normal;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .developer-contact {
     padding: 0;
   }
