--- a/postcss/blocks/order-form-wrapper.css
+++ b/postcss/blocks/order-form-wrapper.css
@@ -4,7 +4,7 @@
   outline: $outline;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .order-form-wrapper {
     padding: 0;
   }
