--- a/postcss/blocks/aboutus-block.css
+++ b/postcss/blocks/aboutus-block.css
@@ -20,7 +20,7 @@
   font-weight: 700;
 
   &--rocket {
-    width: 300px;
+    width: 265px;
   }
 
   &--flower,
@@ -35,7 +35,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .aboutus-block {
     padding-left: 50px;
   }
@@ -49,7 +49,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .aboutus-block {
     display: flex;
     flex-direction: column;
