--- a/postcss/blocks/banner-wrapper.css
+++ b/postcss/blocks/banner-wrapper.css
@@ -1,18 +1,19 @@
 .banner-wrapper {
-  height: 282px;
+  min-height: 282px;
 }
 
 .banner-wrapper__background {
+  box-sizing: border-box;
   height: 100%;
+  padding-top: 70px;
+  padding-bottom: 122px;
   background-image: url("../img/hero-mobile.jpg");
   background-color: #f9f9f9;
   background-repeat: no-repeat;
   background-position: center;
-  padding-top: 70px;
-  box-sizing: border-box;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .banner-wrapper {
     min-width: 768px;
     height: 565px;
