--- a/postcss/blocks/order-form.css
+++ b/postcss/blocks/order-form.css
@@ -38,27 +38,25 @@
 .order-form__personal-input,
 .order-form__phone-input,
 .order-form__email-input {
-  height: 50px;
   width: 100%;
   margin-bottom: 30px;
-  font-family: $normal;
+  padding: 12px 0;
   border: none;
   border-bottom: $btn-border;
 }
 
 .order-form__message-textarea {
-  height: 140px;
+  min-height: 140px;
   width: 100%;
   margin-bottom: 15px;
   padding: 15px;
   box-sizing: border-box;
-  font-family: $normal;
   border: $btn-border;
   resize: none;
 }
 
 .order-form__required-warning {
-  font-size: 13.5px;
+  font-size: 14px;
 
   &--tablet {
     display: none;
@@ -76,7 +74,7 @@
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .order-form {
     display: flex;
     flex-direction: column;
@@ -173,7 +171,7 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .order-form__fieldset {
     padding-left: 215px;
     padding-right: 215px;
