--- a/postcss/blocks/page-footer.css
+++ b/postcss/blocks/page-footer.css
@@ -4,7 +4,7 @@
   outline: $outline;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .page-footer {
     display: flex;
     justify-content: space-between;
