--- a/postcss/blocks/page-header.css
+++ b/postcss/blocks/page-header.css
@@ -17,10 +17,10 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .page-header {
     display: flex;
-    justify-content: space-between;;
+    justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
     padding: 0;
@@ -29,29 +29,29 @@
   }
 
   .page-header__logo {
+    align-self: center;
+    order: 1;
     width: 113px;
     height: 46px;
-    order: 1;
     margin: 0;
-    align-self: center;
     padding-left: 50px;
   }
 
   .page-header__text {
-    display: block;
     order: 4;
+    display: block;
     width: 50%;
-    background-color: #f9f9f9;
     line-height: 83px;
+    background-color: #f9f9f9;
     border-top: 1px solid #ececec;
     color: #444444;
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .page-header {
     width: 100%;
-    width: 1150px;
+    min-width: 1150px;
   }
 
   .page-header__logo {
