--- a/postcss/blocks/video-block.css
+++ b/postcss/blocks/video-block.css
@@ -29,7 +29,7 @@
   color: $basic-color;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .video-block {
     padding: 50px;
   }
@@ -46,9 +46,9 @@
   }
 
   .video-block__content {
-    width: 100%;
-    height: 455px;
     order: 1;
+    width: 100%;
+    min-height: 455px;
   }
 
   .video-block__description {
@@ -64,11 +64,11 @@
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .video-block {
+    position: relative;
     display: flex;
     justify-content: flex-end;
-    position: relative;
     padding: 50px;
   }
 
@@ -78,7 +78,7 @@
     align-items: flex-start;
     justify-content: space-around;
     width: 367px;
-    height: 455px;
+    min-height: 455px;
   }
 
   .video-block__title {
@@ -90,9 +90,9 @@
   .video-block__content {
     position: absolute;
     left: 50px;
-    width: 682px;
-    height: 455px;
     order: 1;
+    width: 682px;
+    min-height: 455px;
   }
 
   .video-block__description {
