--- a/postcss/blocks/week-product.css
+++ b/postcss/blocks/week-product.css
@@ -54,72 +54,127 @@
   color: $basic-color;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   .week-product {
+    position: relative;
     display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
     width: 100%;
-    min-width: 768px;
-    justify-content: space-between;;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 0 50px;
+    max-width: 768px;
+    min-height: 580px;
+    margin: 0 auto;
+    padding: 50px;
     box-sizing: border-box;
   }
 
+  .week-product__title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 630px;
+    margin-bottom: 60px;
+  }
+
   .week-product__title {
-    font-size: $week-product-title-desktop-fontsize;
     order: 1;
+    font-size: $week-product-title-tablet-fontsize;
   }
 
   .week-product__category-title {
     order: 2;
+    width: 70px;
+    text-align: center;
+    line-height: 16px;
   }
 
   .week-product__description {
-    width: 285px;
-    font-size: $week-product-description-desktop-fontsize;
-    line-height: 30px;
     order: 3;
     align-self: flex-start;
+    width: 285px;
+    margin-bottom: 30px;
+    font-size: $week-product-description-desktop-fontsize;
+    line-height: 30px;
   }
 
   .week-product__img {
+    position: absolute;
+    right: 45px;
+    bottom: 50px;
+    z-index: -1;
     order: 4;
+    width: 333px;
+    height: 404px;
   }
 
   .week-product__options-table {
-    width: 290px;
     order: 5;
+    width: 290px;
+    margin-bottom: 45px;
   }
 
   .week-product__item-price {
     order: 6;
+    width: 290px;
+    text-align: center;
   }
 
   .week-product__order {
     order: 7;
+    box-sizing: border-box;
+    width: 290px;
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   .week-product {
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+    max-width: 1050px;
     min-height: 755px;
+    padding-top: 125px;
+  }
+
+  .week-product__title-wrapper {
+    width: 650px;
   }
 
   .week-product__title {
     order: 2;
     align-self: center;
+    font-size: $week-product-title-desktop-fontsize;
+    line-height: 57px;
   }
 
   .week-product__category-title {
     order: 1;
   }
 
+  .week-product__description {
+    margin-left: 125px;
+    margin-bottom: 50px;
+  }
+
+  .week-product__options-table {
+    margin-left: 125px;
+    margin-bottom: 100px;
+  }
+
+  .week-product__item-price {
+    margin-left: 125px;
+  }
+
+  .week-product__order {
+    margin-left: 125px;
+  }
+
   .week-product__img {
     position: absolute;
     right: 0;
+    width: 525px;
+    height: 636px;
   }
 
   .week-product__order {
