--- a/postcss/global.css
+++ b/postcss/global.css
@@ -27,14 +27,15 @@ img {
   height: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $tablet-width) {
   body {
-    min-width: 768px;
+    width: 100%;
   }
 }
 
-@media (min-width: 1150px) {
+@media (min-width: $desktop-width) {
   body {
-    width: 1150px;
+    width: 100%;
+    min-width: 1150px;
   }
 }
