--- a/postcss/blocks/page-header.css
+++ b/postcss/blocks/page-header.css
@@ -42,9 +42,9 @@
     display: block;
     width: 50%;
     line-height: 83px;
-    background-color: #f9f9f9;
+    background-color: $page-header__text-background;
     border-top: 1px solid #ececec;
-    color: #444444;
+    color: $page-header__text-color;
   }
 }
 
