--- a/postcss/blocks/aboutus-block.css
+++ b/postcss/blocks/aboutus-block.css
@@ -1,4 +1,6 @@
 .aboutus-block {
+  box-sizing: border-box;
+  margin: 0 auto;
   padding: 30px;
   outline: $outline;
 }
@@ -54,6 +56,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    max-width: 1050px;
   }
 
   .aboutus-block__title {
