--- a/postcss/blocks/catalog-wrapper.css
+++ b/postcss/blocks/catalog-wrapper.css
@@ -8,6 +8,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 670px;
+    margin: 0 auto;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -15,7 +19,9 @@
   .catalog-wrapper {
     flex-direction: row;
     justify-content: space-between;
-    padding-right: 50px;
-    padding-left: 50px;
+    padding-right: 0;
+    padding-left: 0;
+    width: 100%;
+    max-width: 1050px;
   }
 }
