--- a/postcss/blocks/main-nav.css
+++ b/postcss/blocks/main-nav.css
@@ -33,6 +33,7 @@
     order: 3;
     width: 50%;
     margin: 0;
+    background-color: #ffffff;
 
     &--desktop {
       display: none;
@@ -45,7 +46,6 @@
     }
 
     &--grey {
-      padding-left: 50px;
       box-sizing: border-box;
       background-color: #f9f9f9;
       border-top: 1px solid $main-nav-color;
@@ -60,10 +60,6 @@
       border-left: 1px solid $main-nav-color;
       border-right: 1px solid $main-nav-color;
     }
-  }
-
-  .main-nav__link--search {
-    /*font-size: 0;*/
   }
 
   .main-nav__toggle {
