--- a/postcss/blocks/page-footer.css
+++ b/postcss/blocks/page-footer.css
@@ -5,9 +5,18 @@
 }
 
 @media (min-width: $tablet-width) {
-  .page-footer {
+  .page-footer__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 670px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer__wrapper {
+    width: 100%;
+    max-width: 1050px;
   }
 }
