--- a/postcss/blocks/page-header.css
+++ b/postcss/blocks/page-header.css
@@ -19,13 +19,24 @@
 
 @media (min-width: $tablet-width) {
   .page-header {
+    padding: 0;
+    background: linear-gradient(to bottom,
+                rgba(255,255,255,1) 0%,
+                rgba(255,255,255,1) 50%,
+                rgba(249,249,249,1) 50%,
+                rgba(249,249,249,1) 100%);
+  }
+
+  .page-header__elements-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
-    padding: 0;
     width: 100%;
-    min-width: 768px;
+    max-width: 670px;
+    padding: 0;
+    margin: 0 auto;
+    background-color: #ffffff;
   }
 
   .page-header__logo {
@@ -49,9 +60,9 @@
 }
 
 @media (min-width: $desktop-width) {
-  .page-header {
+  .page-header__elements-wrapper {
     width: 100%;
-    min-width: 1150px;
+    min-width: 1050px;
   }
 
   .page-header__logo {
