--- a/postcss/blocks/product.css
+++ b/postcss/blocks/product.css
@@ -51,6 +51,7 @@
     justify-content: space-between;
     width: 315px;
     min-height: 660px;
+    margin: 0;
     box-sizing: border-box;
   }
 
