--- a/postcss/variables.css
+++ b/postcss/variables.css
@@ -47,5 +47,6 @@ $week-product-price-fontsize: 17px;
 $btn-border: 2px solid #444444;
 $basic-color: #444444;
 
+$mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1150px;
