Изменил размер шрифта в заголовке О нас

--- a/postcss/variables.css
+++ b/postcss/variables.css
@@ -10,6 +10,7 @@ $main-nav-color: #e7e7e7;
 
 $aboutus-block-title-fontsize: 25px;
 $aboutus-block-title-tablet-fontsize: 43px;
+$aboutus-block-title-desktop-fontsize: 53px;
 $aboutus-block-item-fontsize: 17px;
 
 $comments-title-fontsize: 25px;
