--- a/postcss/blocks/banner-wrapper.css
+++ b/postcss/blocks/banner-wrapper.css
@@ -7,19 +7,38 @@
   height: 100%;
   padding-top: 70px;
   padding-bottom: 122px;
-  background-image: url("../img/hero-mobile.jpg");
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-color: #f9f9f9;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center -18px;
 }
+
+@media  (min-resolution: 144dpi),
+        (min-resolution: 1.5dppx) {
+  .banner-wrapper__background {
+    background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 575px auto;
+  }
+}
+
 
 @media (min-width: $tablet-width) {
   .banner-wrapper {
     min-width: 768px;
-    height: 565px;
+    height: 538px;
   }
 
   .banner-wrapper__background {
-    background-image: url("../img/hero-desktop.jpg");
+    padding-top: 0;
+    background-image: url("../img/hero-desktop@1x.jpg");
+    background-position: center -88px;
+  }
+}
+
+@media  (min-resolution: 144dpi),
+        (min-resolution: 1.5dppx) {
+  .banner-wrapper__background {
+    background-image: url("../img/hero-desktop@2x.jpg");
+    background-size: 1150px auto;
   }
 }
