--- a/postcss/blocks/catalog-wrapper.css
+++ b/postcss/blocks/catalog-wrapper.css
@@ -1,6 +1,6 @@
 .catalog-wrapper {
   padding: 30px;
-  outline: $outline;
+  padding-bottom: 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -12,6 +12,7 @@
     margin: 0 auto;
     padding-left: 0;
     padding-right: 0;
+    padding-top: 80px;
   }
 }
 
@@ -21,6 +22,7 @@
     justify-content: space-between;
     padding-right: 0;
     padding-left: 0;
+    padding-top: 130px;
     width: 100%;
     max-width: 1050px;
   }
