--- a/postcss/blocks/order-description.css
+++ b/postcss/blocks/order-description.css
@@ -1,7 +1,10 @@
 .order-description {
-  padding: 30px;
+  padding-top: 25px;
+  padding-right: 31px;
+  padding-left: 30px;
+  padding-bottom: 20px;
   margin: 0;
-  font-size: $order-description-fontsize;
+  font-size: $order-description-mobile-fontsize;
   line-height: 24px;
   color: $basic-color;
 }
@@ -11,13 +14,21 @@
     box-sizing: border-box;
     width: 700px;
     margin: 0 auto;
+    padding-top: 74px;
+    padding-left: 17px;
+    padding-bottom: 68px;
+    font-size: $order-description-fontsize;
+    line-height: 30px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .order-description {
+    box-sizing: border-box;
     width: 1050px;
+    padding-top: 123px;
     padding-left: 175px;
     padding-right: 175px;
+    margin: 0 auto;
   }
 }
