--- a/postcss/blocks/page-footer.css
+++ b/postcss/blocks/page-footer.css
@@ -1,16 +1,30 @@
 .page-footer {
   padding: 20px 30px;
+  padding-top: 5px;
+  padding-bottom: 29px;
   background-color: #f1f1f1;
   outline: $outline;
 }
 
+.footer-logo {
+  display: none;
+}
+
 @media (min-width: $tablet-width) {
+  .page-footer {
+    padding-top: 39px;
+  }
+
   .page-footer__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 670px;
     margin: 0 auto;
+  }
+
+  .footer-logo {
+    display: block;
   }
 }
 
