--- a/postcss/blocks/product.css
+++ b/postcss/blocks/product.css
@@ -1,47 +1,106 @@
 .product {
-  width: 260px;
+  width: 258px;
   margin: 0 auto;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
   border: 1px solid #ececec;
 }
 
 .product__title {
   margin: 0;
-  margin-top: 28px;
+  margin-top: 24px;
   padding: 0 28px;
-  margin-bottom: 15px;
+  margin-bottom: 9px;
   font-size: $product-title-fontsize;
   font-weight: 700;
 }
 
 .product__description {
   padding: 0 28px;
-  font-size: $product-description-fontsize;
+  padding-left: 27px;
+  font-size: $product-description-mobile-fontsize;
   color: $basic-color;
 }
 
 .product__price-cart-wrapper {
+  display: flex;
+  justify-content: space-between;
   margin: 0 auto;
   margin-top: 25px;
-  width: 200px;
-  padding-top: 25px;
+  width: 205px;
+  padding-top: 23px;
   border-top: 1px solid #ececec;
+}
+
+.product__cart {
+  position: relative;
+  font-size: 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 21px;
+    height: 19px;
+    background-image: url("../img/icon-cart.svg");
+  }
+}
+
+.product__price {
+  font-weight: 700;
 }
 
 @media (min-width: $tablet-width) {
   .product {
     display: flex;
     width: 668px;
-    min-height: 335px;
+    min-height: 334px;
+    padding-bottom: 0;
+    margin-bottom: 51px;
+  }
+
+  .product picture {
+    height: 334px;
+  }
+
+  .product__title {
+    width: 238px;
+    font-size: $product-title-tablet-fontsize;
   }
 
   .product__img {
-    width: 335px;
+    max-width: 334px;
+    width: 334px;
   }
 
   .product__description-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-bottom: 0;
+  }
+
+  .product__description {
+    font-size: $product-description-tablet-fontsize;
+  }
+
+  .product__price {
+    font-size: $product__price-tablet-fontsize;
+  }
+
+  .product__text-wrapper {
+    padding-bottom: 0;
+  }
+
+  .product__price-cart-wrapper {
+    justify-content: space-between;
+    margin-left: 31px;
+    width: 271px;
+    padding-bottom: 28px;
+    padding-top: 21px;
+    margin-top: 0;
   }
 }
 
@@ -57,6 +116,7 @@
 
   .product__img {
     height: 460px;
+    max-width: 100%;
     width: 315px;
   }
 
@@ -64,11 +124,13 @@
     box-sizing: border-box;
     min-height: 195px;
     padding: 25px;
+    padding-top: 22px;
   }
 
   .product__title {
     margin: 0;
     padding: 0;
+    margin-bottom: 7px;
   }
 
   .product__description {
@@ -79,5 +141,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0;
+    width: 257px;
+    padding-bottom: 3px;
   }
 }
